// RollIQ database schema (Postgres, via Flyway migrations V1-V9).
// View this file at https://dbdiagram.io/d — paste the contents into the
// editor (no account needed to view/export, only to save a persistent link).
// Regenerate/update this file by hand whenever a new migration changes the
// schema; it is documentation, not a source of truth for the DB itself.

Enum belt_enum {
  white
  blue
  purple
  brown
  black
}

Enum session_type_enum {
  fundamentals
  advanced
  open_mat
  private
  competition_class
}

Enum progress_status_enum {
  want_to_watch
  in_progress
  completed
}

Enum difficulty_enum {
  beginner
  intermediate
  advanced
}

Enum gym_role_enum {
  owner
  trainer
  member
}

// --- Auth -----------------------------------------------------------------

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  email text [not null, unique]
  password_hash text [not null]
  created_at timestamptz [not null, default: `now()`]
}

Table refresh_tokens {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  token_hash text [not null, unique]
  expires_at timestamptz [not null]
  revoked boolean [not null, default: false]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    user_id
  }

  Note: 'delete: cascade on users.id'
}

// --- Profile / personal training log ---------------------------------------

Table profiles {
  id uuid [pk, ref: - users.id]
  display_name text
  current_belt belt_enum [not null, default: 'white']
  current_stripes int [not null, default: 0, note: '0..4']
  home_gym text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: 'id is also the FK (1:1 with users), delete: cascade'
}

Table training_sessions {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  date date [not null]
  gi boolean [not null]
  duration_minutes int [note: '> 0']
  session_type session_type_enum [not null]
  instructor text
  notes text
  rounds_count int [note: '>= 0']
  round_minutes int [note: '> 0']
  productivity_rating int [note: '1..5']
  submissions_landed_count int [note: '>= 0']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, date) [name: 'training_sessions_user_id_date_idx']
  }

  Note: 'delete: cascade on users.id'
}

Table techniques {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  name text [not null]
  position text [not null, note: 'free text, not an enum']
  notes text
  resource_url text
  drill_count int [not null, default: 0, note: '>= 0']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    user_id
  }

  Note: 'delete: cascade on users.id'
}

Table session_techniques {
  session_id uuid [not null, ref: > training_sessions.id]
  technique_id uuid [not null, ref: > techniques.id]
  user_id uuid [not null, ref: > users.id]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (session_id, technique_id) [pk]
    technique_id
  }

  Note: 'many-to-many join; delete: cascade on both parents and on users.id'
}

Table rolls {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  session_id uuid [ref: > training_sessions.id, note: 'nullable, delete: set null']
  partner_name text
  submissions_landed "text[]" [not null, default: `'{}'`]
  submissions_received "text[]" [not null, default: `'{}'`]
  escapes int [not null, default: 0, note: '>= 0']
  effort_rating int [note: '1..5']
  notes text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    user_id
    session_id
  }

  Note: 'delete: cascade on users.id'
}

Table belt_promotions {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  belt belt_enum [not null]
  promoted_on date [not null]
  notes text
  stripes int [not null, default: 0, note: '0..4']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, promoted_on)
  }

  Note: 'append-only log; delete: cascade on users.id'
}

// --- Instructionals (shared catalog, first non-owned data) -----------------

Table instructionals {
  id uuid [pk, default: `gen_random_uuid()`]
  title text [not null]
  instructor text [not null]
  category text [not null, note: 'free text, not an enum']
  difficulty difficulty_enum [not null]
  platform text
  url text
  description text
  release_year int
  created_by uuid [ref: > users.id, note: 'nullable, delete: set null']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    instructor
    category
  }

  Note: 'shared/open catalog -- no ownership check on reads or writes'
}

Table instructional_videos {
  id uuid [pk, default: `gen_random_uuid()`]
  instructional_id uuid [not null, ref: > instructionals.id]
  title text [not null]
  sequence_number int [not null]
  url text
  duration_minutes int [note: '> 0']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (instructional_id, sequence_number)
  }

  Note: 'delete: cascade on instructionals.id'
}

Table instructional_progress {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  video_id uuid [not null, ref: > instructional_videos.id]
  status progress_status_enum [not null]
  notes text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    user_id
    (user_id, video_id) [unique]
  }

  Note: 'owned by user_id, per-video (not per-series); delete: cascade on users.id and instructional_videos.id'
}

// --- Gyms (shared, role-gated -- the app's first permission model) ---------

Table gyms {
  id uuid [pk, default: `gen_random_uuid()`]
  name text [not null]
  description text
  invite_code text [not null, unique]
  created_by uuid [ref: > users.id, note: 'nullable, delete: set null']
  created_at timestamptz [not null, default: `now()`]
}

Table gym_memberships {
  id uuid [pk, default: `gen_random_uuid()`]
  gym_id uuid [not null, ref: > gyms.id]
  user_id uuid [not null, ref: > users.id]
  role gym_role_enum [not null]
  joined_at timestamptz [not null, default: `now()`]

  indexes {
    user_id
    gym_id
    (gym_id, user_id) [unique]
  }

  Note: 'owner/trainer/member -- authorization source of truth for gym-scoped writes; delete: cascade on gyms.id and users.id'
}

Table gym_class_entries {
  id uuid [pk, default: `gen_random_uuid()`]
  gym_id uuid [not null, ref: > gyms.id]
  title text [not null]
  description text
  class_date date [not null]
  created_by uuid [ref: > users.id, note: 'nullable, delete: set null']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (gym_id, class_date)
  }

  Note: '"class recap" -- retrospective, append-only; delete: cascade on gyms.id'
}

Table gym_class_videos {
  id uuid [pk, default: `gen_random_uuid()`]
  gym_class_entry_id uuid [not null, ref: > gym_class_entries.id]
  url text
  techniques "text[]" [not null, default: `'{}'`]
  sequence_number int [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    gym_class_entry_id
  }

  Note: 'no per-video title (parent class entry has the one title); delete: cascade on gym_class_entries.id'
}

Table gym_schedule_entries {
  id uuid [pk, default: `gen_random_uuid()`]
  gym_id uuid [not null, ref: > gyms.id]
  day_of_week int [not null, note: '1..7, ISO Monday..Sunday']
  start_time time [not null]
  end_time time [not null, note: 'must be after start_time']
  topic text [note: 'optional']
  created_by uuid [ref: > users.id, note: 'nullable, delete: set null']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (gym_id, day_of_week, start_time)
  }

  Note: 'recurring weekly slot -- forward-looking, unlike gym_class_entries; delete: cascade on gyms.id'
}
